5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1724_2525.log
== TEST (2019-05-14 11:53:47) 
-- CODE:
n = int(input("Insira um numero inteiro: "))
d = 0
i = 1
while(d > 1):
	d = n/i
	i = i + 1
	print(d)
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:55:49) 
-- CODE:
n = int(input("Insira um numero inteiro: "))
i = 1
while(n != n):
	d = n / i
	i = i + 1
	print(d)
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:19) 
-- CODE:
n = int(input("Insira um numero inteiro: "))
i = 1
while(n != n):
	d = n / i
	print(d)
	i = i + 1
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:21) 
-- CODE:
n = int(input("Insira um numero inteiro: "))
i = 1
while((n/i) != 1):
	d = n / i
	i = i + 1
	print(d)
-- OUTPUT:
12.0
6.0
4.0
3.0
2.4
2.0
1.7142857142857142
1.5
1.3333333333333333
1.2
1.0909090909090908
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:02:02) 
-- CODE:
n = int(input("Insira um numero inteiro: "))

i = 1
while((n%i) == 0):
	d = 
	i = i + 1
-- ERROR:
File "XXXX", line 5
    d = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:11:22) 
-- CODE:
n = int(input("Insira um numero inteiro: "))

i = 0
d = 0
while(i < n):
	i = i + 1
	if((n%i) == 0):
		print(i)
		d = d + 1
if(d == 1):
	print("1 divisor")
else:
	print(x, "divisores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(x, "divisores")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:11:30) 
-- CODE:
n = int(input("Insira um numero inteiro: "))

i = 0
d = 0
while(i < n):
	i = i + 1
	if((n%i) == 0):
		print(i)
		d = d + 1
if(d == 1):
	print("1 divisor")
else:
	print(x, "divisores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(x, "divisores")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:11:43) 
-- CODE:
n = int(input("Insira um numero inteiro: "))

i = 0
d = 0
while(i < n):
	i = i + 1
	if((n%i) == 0):
		print(i)
		d = d + 1
if(d == 1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:11:48) 
-- CODE:
n = int(input("Insira um numero inteiro: "))

i = 0
d = 0
while(i < n):
	i = i + 1
	if((n%i) == 0):
		print(i)
		d = d + 1
if(d == 1):
	print("1 divisor")
else:
	print(d, "divisores")
-- EXECUTION TIME:
0.190062
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
